Fix size of page headers on mobile (#159)
Closes #158

--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -19,4 +19,9 @@ h1 {
     margin-top: -2rem;
     margin-bottom: 2rem;
   }
+
+  @media (max-width: $sm-max) {
+    font-size: 2.25rem;
+    hyphens: auto;
+  }
 }
